Remove obsolete msgid "{disco:remember}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -128,7 +128,7 @@ msgstr "Ungeno ngo-"
 msgid "{disco:select}"
 msgstr "Khetha"
 
-msgid "{disco:remember}"
+msgid "Remember my choice"
 msgstr "Khumbula ukhetho lwam"
 
 msgid "{general:remember}"
