Remove obsolete msgid "{errors:title_RESPONSESTATUSNOSUCCESS}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -186,7 +186,7 @@ msgstr ""
 msgid "{status:subject_notset}"
 msgstr "ayikasetwa"
 
-msgid "{errors:title_RESPONSESTATUSNOSUCCESS}"
+msgid "Error received from Identity Provider"
 msgstr "Impazamo efunyenwe kuMboneleli Wesazisi"
 
 msgid "Select your identity provider"
