Remove obsolete msgid "{errors:title_WRONGUSERPASS}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -113,7 +113,7 @@ msgstr "Akukho fikelelo"
 msgid "Invalid certificate"
 msgstr "Isatifikethi esingasebenziyo"
 
-msgid "{errors:title_WRONGUSERPASS}"
+msgid "Incorrect username or password"
 msgstr "Igama lomsebenzisi okanye iphaswedi engachanekanga"
 
 msgid "{status:authData_summary}"
