--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -315,7 +315,9 @@ msgstr "Amapharamitha athunyelwe kusevisi yokuthola abengavumelani nezici."
 msgid "{status:header_saml20_sp}"
 msgstr "Isampula Ledemo Ye-SAML 2.0 SP"
 
-msgid "{errors:descr_INVALIDCERT}"
+msgid ""
+"Authentication failed: the certificate your browser sent is invalid or "
+"cannot be read"
 msgstr ""
 "Ukuqinisekisa kuhlulekile: isitifiketi esithunyelwe isiphequluli sakho "
 "asivumelekile noma asikwazi ukufundwa"
