Remove obsolete msgid "{errors:descr_MEMCACHEDOWN}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -337,7 +337,9 @@ msgstr "Chaza iimpazamo"
 msgid "{errors:descr_LOGOUTREQUEST}"
 msgstr "Kwenzeke impazamo ngoxa kuproseswa isiCelo Sokuphuma."
 
-msgid "{errors:descr_MEMCACHEDOWN}"
+msgid ""
+"Your session data cannot be retrieved right now due to technical "
+"difficulties. Please try again in a few minutes."
 msgstr ""
 "Ingcombolo yeseshoni yakho ayikwazi ukubuyiselwa okwangoku ngenxa "
 "yeengxaki zobugcisa. Nceda uzame kwakhona kwimizuzu embalwa."
