--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -342,7 +342,9 @@ msgstr "Amaphutha ombiko"
 msgid "{errors:descr_LOGOUTREQUEST}"
 msgstr "Kuvele iphutha ngenkathi izama ukucubungula Isicelo Sokuphuma."
 
-msgid "{errors:descr_MEMCACHEDOWN}"
+msgid ""
+"Your session data cannot be retrieved right now due to technical "
+"difficulties. Please try again in a few minutes."
 msgstr ""
 "Idatha yeseshini yakho ayikwazi ukubuyiswa njengamanje ngenxa yezinkinga "
 "zobuchwepheshe. Sicela uzame futhi emizuzwini embalwa."
