Remove obsolete msgid "{errors:descr_GENERATEAUTHNRESPONSE}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -20,7 +20,9 @@ msgstr "Okulandelayo"
 msgid "{errors:title_METADATANOTFOUND}"
 msgstr "Imetadata ayifunyenwanga"
 
-msgid "{errors:descr_GENERATEAUTHNRESPONSE}"
+msgid ""
+"When this identity provider tried to create an authentication response, "
+"an error occurred."
 msgstr ""
 "Xa lo mboneleli wesazisi ezama ukuyila impendulo yongqinisiso, kwenzeke "
 "impazamo."
