--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -20,7 +20,9 @@ msgstr "Okulandelayo"
 msgid "{errors:title_METADATANOTFOUND}"
 msgstr "Imethadatha ayitholakalanga"
 
-msgid "{errors:descr_GENERATEAUTHNRESPONSE}"
+msgid ""
+"When this identity provider tried to create an authentication response, "
+"an error occurred."
 msgstr ""
 "Ngenkathi lo mhlinzeki kamazisi ezama ukwakha impendulo yokuqinisekisa, "
 "kuvele iphutha."
