Remove obsolete msgid "{errors:howto_text}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -509,7 +509,10 @@ msgstr ""
 msgid "{logout:no}"
 msgstr "Hayi"
 
-msgid "{errors:howto_text}"
+msgid ""
+"This error probably is due to some unexpected behaviour or to "
+"misconfiguration of SimpleSAMLphp. Contact the administrator of this "
+"login service, and send them the error message above."
 msgstr ""
 "Le mpazamo kusenokwenzeka ingenxa yendlela yokwenza engalindelekanga "
 "okanye ulungiselelo olungachanekanga lwe-SimpleSAMLphp. Qhagamshelana "
