--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -515,7 +515,10 @@ msgstr ""
 msgid "{logout:no}"
 msgstr "Cha"
 
-msgid "{errors:howto_text}"
+msgid ""
+"This error probably is due to some unexpected behaviour or to "
+"misconfiguration of SimpleSAMLphp. Contact the administrator of this "
+"login service, and send them the error message above."
 msgstr ""
 "Leli phutha kungenzeka ukuthi libangelwa indlela yokuziphatha "
 "engalindelwe noma umiso olungafanele lwe-SimpleSAMLphp. Thinta umlawuli "
