--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -390,7 +390,9 @@ msgstr "Asizange samukele impendulo ethunyelwe ukusuka Kumhlinzeki Kamazisi."
 msgid "Please select the identity provider where you want to authenticate:"
 msgstr "Sicela ukhethe umhlinzeki kamazisi lapho ofuna ukuqinisekisa khona:"
 
-msgid "{logout:failedsps}"
+msgid ""
+"Unable to log out of one or more services. To ensure that all your "
+"sessions are closed, you are encouraged to <i>close your webbrowser</i>."
 msgstr ""
 "Ayikwazi ukuphuma kusevisi eyodwa noma ngaphezulu. Ukuze wenze "
 "isiqiniseko sokuthi wonke amaseshini akho avaliwe, ukhuthazwa ukuthi "
