Remove obsolete msgid "{login:user_pass_text}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -194,7 +194,9 @@ msgstr "Khetha umboneleli wesazisi wakho"
 msgid "Password not set"
 msgstr "Iphaswedi ayisetwanga"
 
-msgid "{login:user_pass_text}"
+msgid ""
+"A service has requested you to authenticate yourself. Please enter your "
+"username and password in the form below."
 msgstr ""
 "Inkonzo icele ukuba uzingqinisise. Nceda ungenise igama lomsebenzisi "
 "nephaswedi yakho kwifomu ngezantsi."
