--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -197,7 +197,9 @@ msgstr "Khetha umhlinzeki wakho kamazisi"
 msgid "Password not set"
 msgstr "Iphasiwedi ayisethiwe"
 
-msgid "{login:user_pass_text}"
+msgid ""
+"A service has requested you to authenticate yourself. Please enter your "
+"username and password in the form below."
 msgstr ""
 "Isevisi icele ukuthi uziqinisekise. Sicela ufake igama lakho lomsebenzisi"
 " nephasiwedi ngohlobo olungezansi."
