Remove obsolete msgid "{status:intro}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -48,7 +48,10 @@ msgstr ""
 "Uthumele into kwikhasi lokungena, kodwa ngesizathu esithile iphaswedi "
 "ayithunyelwanga. Nceda uzame kwakhona."
 
-msgid "{status:intro}"
+msgid ""
+"Hi, this is the status page of SimpleSAMLphp. Here you can see if your "
+"session is timed out, how long it lasts until it times out and all the "
+"attributes that are attached to your session."
 msgstr ""
 "Molo, eli likhasi lobume be-SimpleSAMLphp. Apha ungabona ukuba ngaba "
 "iseshoni yakho iphelelwe lixesha, iza kuhlala ixesha elide kangakanani "
