--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -49,7 +49,10 @@ msgstr ""
 "Uthumele okuthile ekhasini lokungena, kodwa ngasizathu simbe iphasiwedi "
 "ayizange ithunyelwe. Sicela uzame futhi."
 
-msgid "{status:intro}"
+msgid ""
+"Hi, this is the status page of SimpleSAMLphp. Here you can see if your "
+"session is timed out, how long it lasts until it times out and all the "
+"attributes that are attached to your session."
 msgstr ""
 "Sawubona, leli ikhasi lesimo se-SimpleSAMLphp. Lapha ungakwazi ukubona "
 "ukuthi iseshini yakho iphelelwe isikhathi yini, ukuthi ihlala isikhathi "
