Remove obsolete msgid "{errors:descr_NORELAYSTATE}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -147,7 +147,9 @@ msgstr ""
 "Le ndawo yokuphela ayenziwanga yasebenza. Jonga ukhetho lokwenza isebenze"
 " kulungiselelo lwakho lwe-SimpleSAMLphp."
 
-msgid "{errors:descr_NORELAYSTATE}"
+msgid ""
+"The initiator of this request did not provide a RelayState parameter "
+"indicating where to go next."
 msgstr ""
 "Umqalisi wesi sicelo akanikelanga ngepharamitha ye-RelayState apho "
 "kufanele kuyiwe khona."
