--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -150,7 +150,9 @@ msgstr ""
 "Lesi siphetho asivunyelwe. Hlola izinketho zokuvumela kumiso lwakho lwe-"
 "SimpleSAMLphp."
 
-msgid "{errors:descr_NORELAYSTATE}"
+msgid ""
+"The initiator of this request did not provide a RelayState parameter "
+"indicating where to go next."
 msgstr ""
 "Umqalisi walesi sicelo akazange ahlinzeke ngepharamitha ye-RelayState "
 "ebonisa ukuthi kufanele uye kuphi ngokulandelayo."
