Remove obsolete msgid "{errors:descr_ACSPARAMS}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -450,7 +450,10 @@ msgstr "Idilesi ye-imeyile:"
 msgid "Organization"
 msgstr "Umbutho"
 
-msgid "{errors:descr_ACSPARAMS}"
+msgid ""
+"You accessed the Assertion Consumer Service interface, but did not "
+"provide a SAML Authentication Response. Please note that this endpoint is"
+" not intended to be accessed directly."
 msgstr ""
 "Ufikelele i-intafeyisi ye-Assertion Consumer Service, kodwa awukhange "
 "unikele iMpendulo Yongqinisiso ye-SAML. Nceda uqaphele ukuba le ndawo "
