--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -456,7 +456,10 @@ msgstr "Ikheli le-imeyili:"
 msgid "Organization"
 msgstr "Inhlangano"
 
-msgid "{errors:descr_ACSPARAMS}"
+msgid ""
+"You accessed the Assertion Consumer Service interface, but did not "
+"provide a SAML Authentication Response. Please note that this endpoint is"
+" not intended to be accessed directly."
 msgstr ""
 "Ufinyelele ukusebenzisana Kwesevisi Yomthengi Yesimemezelo, kodwa "
 "awuzange uhlinzeke Ngempendulo Yokuqinisekisa ye-SAML. Sicela uphawule "
