Remove obsolete msgid "{errors:descr_NOACCESS}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -142,7 +142,9 @@ msgstr "Impazamo iprosesa impendulo esuka kuMboneleli Wesazisi"
 msgid "The given page was not found. The URL was: %URL%"
 msgstr "Ikhasi elinikelweyo alifunyenwanga. I-URL ngu: %URL%"
 
-msgid "{errors:descr_NOACCESS}"
+msgid ""
+"This endpoint is not enabled. Check the enable options in your "
+"configuration of SimpleSAMLphp."
 msgstr ""
 "Le ndawo yokuphela ayenziwanga yasebenza. Jonga ukhetho lokwenza isebenze"
 " kulungiselelo lwakho lwe-SimpleSAMLphp."
