--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -145,7 +145,9 @@ msgstr "Iphutha lokucubungula impendulo esuka Kumhlinzeki Kamazisi"
 msgid "The given page was not found. The URL was: %URL%"
 msgstr "Ikhasi elinikeziwe alitholakalanga. I-URL ibithi: %URL%"
 
-msgid "{errors:descr_NOACCESS}"
+msgid ""
+"This endpoint is not enabled. Check the enable options in your "
+"configuration of SimpleSAMLphp."
 msgstr ""
 "Lesi siphetho asivunyelwe. Hlola izinketho zokuvumela kumiso lwakho lwe-"
 "SimpleSAMLphp."
